--- a/OnlineSaleSiteAuth.Application/OnlineSaleSiteAuth.Application.csproj
+++ b/OnlineSaleSiteAuth.Application/OnlineSaleSiteAuth.Application.csproj
@@ -19,4 +19,8 @@
     <ProjectReference Include="..\OnlineSaleSiteAuth.Domain\OnlineSaleSiteAuth.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Service\Campaign\Dtos\" />
+  </ItemGroup>
+
 </Project>
