Redesigned based on Redis

--- a/OnlineSaleSiteAuth/appsettings.json
+++ b/OnlineSaleSiteAuth/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "ApplicationDbContext": "Server=.;Database=OnlineSale;Trusted_Connection=True;TrustServerCertificate=True;"
+    "ApplicationDbContext": "Server=.;Database=OnlineSale;Trusted_Connection=True;TrustServerCertificate=True;",
+    "RedisConnection": "localhost"
   },
   "Logging": {
     "LogLevel": {
