--- a/OnlineSaleSiteAuth.Common/OnlineSaleSiteAuth.Common.csproj
+++ b/OnlineSaleSiteAuth.Common/OnlineSaleSiteAuth.Common.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="AutoMapper.Collection" Version="9.0.0" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
+    <PackageReference Include="StackExchange.Redis" Version="2.7.27" />
   </ItemGroup>
 
   <ItemGroup>
