--- a/OnlineSaleSiteAuth/OnlineSaleSiteAuth.csproj
+++ b/OnlineSaleSiteAuth/OnlineSaleSiteAuth.csproj
@@ -26,7 +26,9 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="8.0.2" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.0" />
+    <PackageReference Include="StackExchange.Redis" Version="2.7.27" />
     <PackageReference Include="TinyMCE" Version="6.8.3" />
   </ItemGroup>
 
