--- a/OnlineSaleSiteAuth/appsettings.json
+++ b/OnlineSaleSiteAuth/appsettings.json
@@ -1,4 +1,9 @@
 {
+
+  "Elasticsearch": {
+    "Uri": "http://localhost:9200"
+  },
+
   "ConnectionStrings": {
     "ApplicationDbContext": "Server=.;Database=OnlineSale;Trusted_Connection=True;TrustServerCertificate=True;",
     "RedisConnection": "localhost"
