--- a/OnlineSaleSiteAuth/OnlineSaleSiteAuth.csproj
+++ b/OnlineSaleSiteAuth/OnlineSaleSiteAuth.csproj
@@ -28,6 +28,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="8.0.2" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.0" />
+    <PackageReference Include="NEST" Version="7.17.5" />
     <PackageReference Include="StackExchange.Redis" Version="2.7.27" />
     <PackageReference Include="TinyMCE" Version="6.8.3" />
   </ItemGroup>
